# cooklang-py

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  agents.MD  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: mkdocs.yml
docs/docs/: base_object.md  cookware.md  index.md  ingredient.md  metadata.md  quantity.md  recipe.md  step.md  timing.md
src/cooklang_py/: __init__.py  base_objects.py  const.py  quantity.py  recipe.py  utils.py
tests/: test_base_object.py  test_canonical.py  test_quantity.py  test_recipe.py  test_utils.py
tests/data/: canonical.yaml  no_md.txt  potato_kugel.md  potato_kugel.txt
